tests/ui/feature-gates/feature-gate-proc_macro_c_str_literals.stderr
error[E0658]: use of unstable library feature 'proc_macro_c_str_literals'
  --> $DIR/feature-gate-proc_macro_c_str_literals.rs:10:5
   |
LL |     Literal::c_string(c"a");
   |     ^^^^^^^^^^^^^^^^^
   |
   = note: see issue #119750 <https://github.com/rust-lang/rust/issues/119750> for more information
   = help: add `#![feature(proc_macro_c_str_literals)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
